- internal : updated the thanks section for Mac
--HG--
branch : Viewer-Branding

--- a/doc/thanks.txt
+++ b/doc/thanks.txt
@@ -26,12 +26,16 @@ Innula Zenovka
 	Feedback
 Hitomi Tiponi
 	Starlight Art
+Loom Kish
+	Mac OS X issues
 Penny Patton
 	Happy Bivouac Windlight day
 Razeldine Wirefly
 	Art
 	Bugs
 	Feedback
+Qetesh (vala.vella)
+	Mac Mini
 Satomi Ahn
 	RLVa
 Trix Braveheart
