- internal : reviewed Viewer-Branding for SL-3.6
--HG--
branch : Viewer-Branding

--- a/indra/newview/English.lproj/InfoPlist.strings
+++ b/indra/newview/English.lproj/InfoPlist.strings
@@ -3,4 +3,4 @@
 CFBundleName = "Catznip";
 
 CFBundleShortVersionString = "Catznip version %%VERSION%%";
-CFBundleGetInfoString = "Catznip version %%VERSION%%, Copyright 2004 Linden Research, Inc.";
+CFBundleGetInfoString = "Catznip version %%VERSION%%, Copyright (C)2001-2013, portions by Kitty Barnett, portions by Linden Research, Inc";
